--- a/LyftTrip/LyftTrip/Info.plist
+++ b/LyftTrip/LyftTrip/Info.plist
@@ -22,6 +22,10 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>location</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -34,5 +38,9 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>Enable Location Services to track trips</string>
+    <key>NSLocationAlwaysUsageDescription</key>
+    <string>Enable Location Services to track trips</string>
 </dict>
 </plist>
